# pcs_repository

./: prova.txt
Laboratorio1/Build_es1/: CMakeLists.txt  esercizio1.cpp
esercitazione1/: CMakeLists.txt
esercitazione2/: CMakeLists.txt  esercizio1.cpp  esercizio2.cpp  esercizio3.cpp
